# MATH3310_FA_2025_FP1_G01_PICKETT_CARDONA

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: Final.ipynb
